Updated app logic and added report generator

--- a/templates/result.html
+++ b/templates/result.html
@@ -103,10 +103,11 @@
                     </ul>
                 </div>
 
-                <div class="result-actions">
-                    <a href="/upload" class="btn-primary" style="flex:1;">Analyze Another Image</a>
-                    <a href="/" class="btn-secondary">Back to Home</a>
-                </div>
+                <<div class="result-actions">
+    <a href="/upload" class="btn-primary" style="flex:1;">Analyze Another Image</a>
+    <a href="/report" class="btn-secondary" target="_blank">Download Report</a>
+    <a href="/" class="btn-secondary">Back to Home</a>
+</div>
             </div>
         </div>
     </section>
